# tesseract-cmake-demo

./: CMakeLists.txt  readme.org  simple.cpp
